--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@google/genai": "^1.34.0",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "imagekit": "^6.0.0",
